# fa25_capstoneproject_fe

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: deploy-vercel.yml
electron/: main.js
public/: bg.avif
public/illustrations/: README.md
scripts/: create-placeholder.js  create-production-html.js  post-build.js
src/: middleware.ts
src-tauri/: Cargo.toml  server.js  tauri.conf.json
src/app/: delete-data.js  error.tsx  layout.tsx  loading.tsx  not-found.tsx
src/components/: ClientOnly.tsx  ClientShell.tsx  CopyFeatureDialog.tsx  FeaturePropertiesPanel.tsx  Footer.tsx  Header.tsx  HomeHeader.tsx  ImosBg.tsx  LocaleSwitch.tsx  ManageWorkspaces.tsx  MapCanvas.tsx  MapEditor.tsx  ProjectManagement.tsx  PublishButton.tsx  StoryMapPlayer.tsx  WorkspaceShell.tsx
src/config/: planToolMap.ts
src/constants/: icons.ts  mapIcons.ts
src/contexts/: AuthContext.tsx  ConfirmDialogContext.tsx  LoadingContext.tsx  NotificationContext.tsx  SharedMarkerContext.tsx  ToastContext.tsx  auth-store.ts  useAuthStatus.ts
src/hooks/: question-bank-common.ts  useAttachDialog.ts  useAutoSaveQueue.ts  useBankForm.ts  useCollaborationVisualization.ts  useConfirmDialog.ts  useDebounce.ts  useFeatureManagement.ts  useLayerStyles.ts  useMapCollaboration.ts  useMeasurementTools.ts  useMultiSelect.ts  useNotificationHub.ts  usePoiMarkers.ts  useQuestionBankData.ts  useQuestionBanksData.ts  useQuestionSets.ts  useReducedMotion.ts  useRegisterValidation.ts  (+11 more)
(+396 files in other folders)
